--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="shortcut icon"
-      href="./assets/img/kitty.png"
-      type="image/x-icon"
+        rel="shortcut icon"
+        href="./assets/img/kitty.png"
+        type="image/x-icon"
     />
     <title>Virtual_Keyboard</title>
   </head>
-  <body></body>
+  <body>
+ </body>
 </html>
